--- a/contact.html
+++ b/contact.html
@@ -159,11 +159,11 @@
                <a href="index.html" class="navbar-brand ml-lg-3">
                   <!-- <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Center</h1> -->
                   <img
-                     src="img/grohairlogo-png.png"
+                     src="img/loho.jpg"
                      alt="gro-hair-glo-skin-logo"
                      loading="lazy"
                      class="img-fluid m-0 w-sm-40"
-                     width=""
+                     width="150px"
                      />
                </a>
                <button
