--- a/appointment.html
+++ b/appointment.html
@@ -175,10 +175,10 @@
           <a href="index.html" class="navbar-brand ml-lg-3">
             <!-- <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Center</h1> -->
             <img
-              src="img/grohairlogo-png.png"
+              src="img/loho.jpg"
               alt="gro-hair-glo-skin-logo"
               class="img-fluid m-0 w-sm-40"
-              width=""
+              width="150px"
               loading="lazy"
             />
           </a>
@@ -332,7 +332,7 @@
   <div class="grofooter-container">
     <!-- Column 1: Logo + Tagline -->
     <div class="grofooter-brand">
-      <img src="img/grohairlogo-png.png" alt="GroHair Logo" class="grofooter-logo" />
+      <img src="img/loho.jpg" alt="GroHair Logo" class="grofooter-logo" />
       <p class="grofooter-tagline">Restore your confidence today with our expert hair restoration solutions.<br>Book your consultation now!</p>
     </div>
 
