--- a/service-d.html
+++ b/service-d.html
@@ -148,11 +148,11 @@
                <a href="index.html" class="navbar-brand ml-lg-3">
                   <!-- <h1 class="m-0 text-primary"><span class="text-dark">SPA</span> Center</h1> -->
                   <img
-                     src="img/grohairlogo-png.png"
+                     src="img/loho.jpg"
                      alt="gro-hair-glo-skin-thanjavur"
                      loading="lazy"
                      class="img-fluid m-0 w-sm-40"
-                     width=""
+                     width="150px"
                      />
                </a>
                <button
@@ -555,7 +555,7 @@
   <div class="grofooter-container">
     <!-- Column 1: Logo + Tagline -->
     <div class="grofooter-brand">
-      <img src="img/grohairlogo-png.png" alt="GroHair Logo" class="grofooter-logo" />
+      <img src="img/loho.jpg" alt="GroHair Logo" class="grofooter-logo" />
       <p class="grofooter-tagline">Restore your confidence today with our expert hair restoration solutions.<br>Book your consultation now!</p>
     </div>
 
