--- a/index.html
+++ b/index.html
@@ -338,15 +338,15 @@
       </div>
       <div class="grostats-card">
         <div class="grostats-number">90%</div>
-        <div class="grostats-label">Healthy Hair Growth</div>
+        <div class="grostats-label">Clearer Complexion</div>
       </div>
       <div class="grostats-card">
         <div class="grostats-number">96%</div>
-        <div class="grostats-label">Decrease in Dandruff</div>
+        <div class="grostats-label">Reduction in Pigmentation</div>
       </div>
       <div class="grostats-card">
         <div class="grostats-number">93%</div>
-        <div class="grostats-label">Decrease in Hair Fall</div>
+        <div class="grostats-label">Acne Treatment Success</div>
       </div>
     </div>
   </div>
