--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8" />
-      <title>About GroHair & GloSkin - Best Hair & Skin Clinic in Thanjavur</title>
-      <meta name="description" content="Learn about GroHair & GloSkin, Thanjavur's leading hair and skin care clinic offering PRP therapy, hair transplant, acne treatment, and laser hair removal.">
-      <meta name="keywords" content="About GroHair & GloSkin, Hair clinic in Thanjavur, Best dermatologist in Thanjavur, PRP therapy, Hair transplant, Skin care clinic">
+      <title>About GroHair & GloSkin - Best Hair & Skin Clinic in Bannerghatta</title>
+      <meta name="description" content="Learn about GroHair & GloSkin, Bannerghatta's leading hair and skin care clinic offering PRP therapy, hair transplant, acne treatment, and laser hair removal.">
+      <meta name="keywords" content="About GroHair & GloSkin, Hair clinic in Bannerghatta, Best dermatologist in Bannerghatta, PRP therapy, Hair transplant, Skin care clinic">
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
       <!-- Favicon -->
       <link href="img/hair.png" rel="icon" />
@@ -69,7 +69,7 @@
                "name": "Why choose GroHair & GloSkin for hair and skin treatments?",
                "acceptedAnswer": {
                  "@type": "Answer",
-                 "text": "GroHair & GloSkin offers advanced, medically-approved hair and skin treatments with expert dermatologists and trichologists in Thanjavur."
+                 "text": "GroHair & GloSkin offers advanced, medically-approved hair and skin treatments with expert dermatologists and trichologists in Bannerghatta."
                }
              },
              {
