--- a/appointment.html
+++ b/appointment.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Book an Appointment - Best Hair & Skin Clinic in Thanjavur</title>
+    <title>Book an Appointment - Best Hair & Skin Clinic in Bannerghatta</title>
     <meta
       name="description"
-      content="Schedule your appointment with GroHair & GloSkin for expert hair and skin care treatments, including PRP therapy, hair transplant, and acne treatment in Thanjavur."
+      content="Schedule your appointment with GroHair & GloSkin for expert hair and skin care treatments, including PRP therapy, hair transplant, and acne treatment in Bannerghatta."
     />
     <meta
       name="keywords"
-      content="Book skin treatment in Thanjavur,  PRP therapy appointment, Skin care specialist Thanjavur, Dermatologist booking"
+      content="Book skin treatment in Bannerghatta,  PRP therapy appointment, Skin care specialist Bannerghatta, Dermatologist booking"
     />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <!-- Favicon -->
