--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
    <head>
       <meta charset="utf-8" />
       <title>
-         Contact Us - GroHair & GloSkin | Best Hair & Skin Clinic in Thanjavur
+         Contact Us - GroHair & GloSkin | Best Hair & Skin Clinic in Bannerghatta
       </title>
       <meta
          name="description"
-         content="Get in touch with GroHair & GloSkin in Thanjavur. Call us, visit our clinic, or book an appointment for expert hair and skin treatments."
+         content="Get in touch with GroHair & GloSkin in Bannerghatta. Call us, visit our clinic, or book an appointment for expert hair and skin treatments."
          />
       <meta
          name="keywords"
-         content="Contact GroHair & GloSkin, Hair clinic address Thanjavur, Dermatology clinic contact, Book appointment, Hair transplant consultation"
+         content="Contact GroHair & GloSkin, Hair clinic address Bannerghatta, Dermatology clinic contact, Book appointment, Hair transplant consultation"
          />
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
       <!-- Favicon -->
