--- a/service-d.html
+++ b/service-d.html
@@ -2,9 +2,9 @@
 <html lang="en">
    <head>
       <meta charset="utf-8" />
-      <title>Our Services - Hair & Skin Treatments in Thanjavur | GroHair & GloSkin</title>
-      <meta name="description" content="Explore our advanced hair and skin care treatments in Thanjavur, including PRP therapy, hair transplant, microneedling, acne treatment, and laser hair removal.">
-      <meta name="keywords" content="Hair care treatments, Skin care treatments, PRP therapy, Microneedling, Hair transplant, Laser hair removal, Dermatologist in Thanjavur">
+      <title>Our Services - Hair & Skin Treatments in Bannerghatta | GroHair & GloSkin</title>
+      <meta name="description" content="Explore our advanced hair and skin care treatments in Bannerghatta, including PRP therapy, hair transplant, microneedling, acne treatment, and laser hair removal.">
+      <meta name="keywords" content="Hair care treatments, Skin care treatments, PRP therapy, Microneedling, Hair transplant, Laser hair removal, Dermatologist in Bannerghatta">
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
       <!-- Favicon -->
       <link href="img/hair.png" rel="icon" />
