--- a/about.html
+++ b/about.html
@@ -110,8 +110,7 @@
                      </small>
                   </div>
                </div>
-               <div class="col-lg-6 text-right">
-                  <div class="col-lg-6 text-right">
+              <div class="col-lg-6 text-right">
                   <div class="d-inline-flex align-items-center">
                      <a
                         class="text-primary px-2"
@@ -136,6 +135,7 @@
                      </a>
                   </div>
                </div>
+        </div>
                </div>
             </div>
          </div>
