--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                      </a>
                   </div>
                </div>
+        </div>
             </div>
          </div>
          <!-- Topbar End -->
